# mindscience

./:  RELEASE.md  .gitignore  CONTRIBUTION.md  NOTICE  OWNERS  README.md  README_CN.md  models.md  models_en.md  requirements.txt  test.py
MindEarth/: CMakeLists.txt  CONTRIBUTION_CN.md  NOTICE.txt  README.md  README_CN.md  README_EN.md  RELEASE.md  RELEASE_CN.md  RELEASE_EN.md  build.sh  requirements.txt  setup.py
MindEarth/applications/dem-super-resolution/: DEM-SRNet.ipynb  DEM-SRNet.yaml  DEM-SRNet_CN.ipynb  DEMNet.ipynb  DEMNet.yaml  DEMNet_CN.ipynb  README.md  README_CN.md  main.py
MindEarth/cmake/: check_requirements.cmake  options.cmake  package.cmake  package_script.cmake
MindEarth/mindearth/: __init__.py
MindEarth/mindearth/cell/: __init__.py  activation.py  utils.py
MindEarth/mindearth/core/: __init__.py  losses.py  lr_scheduler.py
MindEarth/mindearth/data/: __init__.py  dataset.py
MindEarth/mindearth/module/: __init__.py  forecast.py  pretrain.py
MindEarth/mindearth/utils/: __init__.py  logger.py  tools.py  visual.py  wind_quiver.py
MindElec/: CMakeLists.txt  NOTICE  README.md  README_CN.md  README_cn.md  RELEASE.md  RELEASE_CN.md  Third_Party_Open_Source_Software_Notice  build.sh  requirements.txt  setup.py
MindElec/cmake/: check_requirements.cmake  data_expression.cmake  options.cmake  package.cmake  package_script.cmake  utils.cmake
MindElec/cmake/external_libs/: glog.cmake  json.cmake  pybind11.cmake
MindElec/examples/: README.md  README_CN.md
MindElec/examples/AD_FDTD/: .markdownlint.json  README.md  README_CN.md
MindElec/mindelec/: __init__.py  version.py
MindElec/mindelec/architecture/: __init__.py  activation.py  basic_block.py  mtl_weighted_loss.py  util.py
MindElec/mindelec/ccsrc/: CMakeLists.txt
MindElec/mindelec/common/: __init__.py  constants.py  lr_scheduler.py  metrics.py
MindElec/mindelec/data/: __init__.py  boundary.py  data_base.py  dataset.py  equation.py  existed_data.py
MindElec/mindelec/geometry/: __init__.py  csg.py  geometry_1d.py  geometry_2d.py  geometry_3d.py  geometry_base.py  geometry_nd.py  geometry_td.py  utils.py
MindElec/mindelec/loss/: __init__.py  constraints.py  losses.py  net_with_loss.py
MindElec/mindelec/operators/: __init__.py  derivatives.py
MindElec/mindelec/solver/: __init__.py  callback.py  problem.py  solver.py
MindElec/mindelec/vision/: __init__.py  body.py  mindinsight_vision.py  plane.py  print_scatter.py  video.py
MindSPONGE/: CMakeLists.txt  NOTICE  OWNERS  README.md  README_CN.md  README_EN.md  RELEASE.md  RELEASE_CN.md  build.sh  requirements.txt  setup.py
MindSPONGE/applications/: README.md  README_EN.md
MindSPONGE/applications/MEGAProtein/: README.md  README_CN.md  README_EN.md  main.py
MindSPONGE/applications/common_utils/: README.md
MindSPONGE/applications/model cards/: ESM-IF1.md  GROVER.MD  MEGAProtein.md  MGBERT.MD  ProteinMPNN.MD  UFold.md
MindSPONGE/applications/model_cards/: ColabDesign.md  DNABERT.MD  DeepFri.md  ESM-2.md  ESM-IF1.md  GROVER.MD  GraphDTA.MD  MEGAProtein.md  ProtT5.md  UFold.md  afmultimer.md  pafnucy.md
MindSPONGE/cybertron/: __init__.py  activation.py  aggregator.py  base.py  block.py  cutoff.py  cybertron.py  dataset.py  decoder.py  filter.py  interaction.py  model.py  rbf.py  readout.py  setup.py  train.py
MindSPONGE/docs/: docs.txt  simple_formula.md
MindSPONGE/examples/: README.md  README_CN.md  case_polypeptide.md  mindsponge_numpy.md
MindSPONGE/examples/claisen_rearrangement/: README_CN.md
MindSPONGE/examples/covid/: README_CN.md
MindSPONGE/examples/polypeptide/: README_CN.md
MindSPONGE/examples/structure_prediction/: eval.py  model.py  train.py
MindSPONGE/mindsponge/: __init__.py  main.py  main_numpy.py  main_poly.py
MindSPONGE/mindsponge/fold/: README_CN.md  model.py  run.py  serving_client.py  serving_server.py
MindSPONGE/mindsponge/md/: __init__.py  npt.py  simulation.py  simulation_np.py  simulation_poly.py
MindSPONGE/mindsponge/python/: __init__.py
MindSPONGE/mindsponge/toolkits/: __init__.py  __main__.py  build.py  load.py  process.py
MindSPONGE/protein_msa/: README_CN.md
MindSPONGE/src/aichemist/: __init__.py  setup.py
MindSPONGE/src/mindsponge/: __init__.py
MindSPONGE/src/sponge/: __init__.py
MindSPONGE/tests/covid_numpy/: run_covid_numpy.sh
MindSPONGE/tests/fold_test/: features24.pkl  model.py  result24.npy  run_pytest.py
MindSPONGE/tests/fold_train/: model.py  test_train.py
MindSPONGE/tutorials/: README.md  megafold_example.ipynb  快速入门.md
MindSPONGE/tutorials/IDM/: readme.txt  view_result.ipynb
MindSPONGE/tutorials/advanced/: tutorial_a01.ipynb  tutorial_a01.py  tutorial_a02.ipynb  tutorial_a02.py  tutorial_a03.ipynb  tutorial_a03.py  tutorial_a04.ipynb  tutorial_a04.py
MindSPONGE/tutorials/basic/: tutorial_b00.ipynb  tutorial_b01.ipynb  tutorial_b01.py  tutorial_b02.ipynb  tutorial_b02.py  tutorial_b03.ipynb  tutorial_b03.py  tutorial_b04.ipynb  tutorial_b04.py  tutorial_b05.ipynb  tutorial_b05.py  tutorial_b06.ipynb  tutorial_b06.py  tutorial_b07.py  tutorial_b08.py  tutorial_b09.py
MindSPONGE/tutorials/cybertron/: dataset_ethanol_normed_trainset_1024.npz  dataset_ethanol_normed_validset_128.npz  dataset_ethanol_origin_testset_1024.npz  dataset_qm9_normed_testset_1024.npz  dataset_qm9_normed_trainset_1024.npz  dataset_qm9_normed_validset_128.npz  dataset_qm9_origin_testset_1024.npz  dataset_qm9_origin_trainset_1024.npz  dataset_qm9_origin_validset_128.npz  tutorial_c00.ipynb  tutorial_c00.py  tutorial_c01.ipynb  tutorial_c01.py  tutorial_c02.ipynb  tutorial_c02.py  tutorial_c03.ipynb  tutorial_c03.py  tutorial_c04.ipynb  tutorial_c04.py  tutorial_c05.ipynb  tutorial_c05.py  tutorial_c06.ipynb  tutorial_c06.py  tutorial_c07.ipynb  tutorial_c07.py  tutorial_c08.ipynb  tutorial_c08.py  tutorial_c09.ipynb  tutorial_c09.py  tutorial_c10.ipynb  tutorial_c10.py
MindSPONGE/tutorials/summerschool/: README.md  tutorial_c01.ipynb  tutorial_c01.py  tutorial_c02.ipynb  tutorial_c02.py  tutorial_c03.ipynb  tutorial_c03.py  tutorial_c04.ipynb  tutorial_c04.py  tutorial_p01.ipynb  (+12 more)
(+5255 files in other folders)
